# Execra

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  requirements.txt
.github/: dependabot.yml  labels.yml
.github/workflows/: ci.yml  regression-tests.yml
SDK/: README.md  pyproject.toml
SDK/execra_sdk/: __init__.py  _constants.py  client.py  exceptions.py  models.py
SDK/tests/: __init__.py  conftest.py  test_client_rest.py  test_client_ws.py  test_exceptions.py
api/: main.py
api/routes/: mode.py  suppression.py
core/: config.py  exceptions.py  logger.py  schemas.py
core/errors/: __init__.py  error_codes.py  exceptions.py  handler.py
core/hybrid/: action_logger.py  alert_suppressor.py  guidance_dispatcher.py
core/intelligence/: debate_engine.py  plugin_rule_engine.py
core/perception/: __init__.py  base.py  camera_feed.py  ocr_engine.py  privacy_masker.py  screen_capture.py
core/physical/: object_detector.py
core/plugins/: rule_loader.py
core/utils/: env_validator.py  retry.py  test_text_cleaner.py  text_cleaner.py
docs/: api.playground.html  api_reference.md  deployment.md
k8s/: configmap.yaml  deployment.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  redis.yaml  secret.yaml  service.yaml
models/anomaly/: trace_model.pkl
plugins/rules/: example_null_check.yaml
research/: PAPER.md
research/results/: baseline_report.json  eval_report.json
scripts/: download_models.py
tests/: conftest.py  test_plugin_system.py  test_trace_anomaly_detector.py
tests/integration/: test_status_mode.py
tests/unit/: test_config.py  (+8 more)
(+21 files in other folders)
