[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "execra-sdk"
version = "0.1.0"
description = "Python SDK for Execra — Universal Execution Intelligence Layer"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Execra Team" },
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
